--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   height: 100vh;
 }
 
-.App {
+#App {
   width: 100%;
   height: 100%;
   max-width: 1200px;
@@ -25,7 +25,7 @@ body {
   margin-bottom: 24px;
 }
 
-.App ul li {
+#App ul li {
   list-style: none;
 }
 
